--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
     <p>
       This site is a sample project for the 
       <strong>awesome</strong> Git
-      tutorial <em>Learn 
+      tutorial <em><em>Learn Enough™ Git to Be Dangerous</em>. 
     </p>
   </body>
 </html>
